--- a/mc/pom.xml
+++ b/mc/pom.xml
@@ -32,7 +32,19 @@
       <version>4.1.6-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.comphenix.protocol</groupId>
+      <artifactId>ProtocolLib</artifactId>
+      <version>4.7.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
+  <repositories>
+    <repository>
+      <id>dmulloy2-repo</id>
+      <url>https://repo.dmulloy2.net/repository/public/</url>
+    </repository>
+  </repositories>
   <build>
     <plugins>
       <plugin>
